C17- site is response until 620px.  Still need to fix divs aligning under 620px

--- a/My Favorite Books App/main.css
+++ b/My Favorite Books App/main.css
@@ -53,6 +53,7 @@ button {
     margin-left: 10px;
     border-radius: 10px;
     font-size: 22px;
+    border: 1px solid gray;
 }
 
 .thumbnail-div {
@@ -135,3 +136,56 @@ button {
     padding: 20px;
     /* text-decoration: none; */
 }
+
+@media (max-width: 1200px) {
+    .button-div {
+        background: rgba(0,0,0,0.2);
+        border: 1px solid black;
+        width: 100%;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        /* flex-wrap: nowrap; */
+        justify-content: center;
+        content: center;
+        align-items: center;
+    }
+
+    .move, .delete, .blurb {
+        margin: 5px;
+    }
+}
+
+@media (max-width: 620px) {
+    .thumbnail-div {
+        display: flex;
+        flex-direction: column;
+        height: 320px;
+        width: 100%;
+        align-items: center;
+        align-content: center;
+        justify-content: baseline;
+        /* flex-direction: column;
+        align-items: space-between;
+        align-content: flex-end; */
+    }
+
+    .button-div {
+        height: 40%;
+    }
+
+    .img {
+        height: 60%;
+    }
+
+    .current-container, .finished-container {
+        align-items: center;
+    }
+
+    .input-text {
+        width: 250px;
+    }
+
+}
+
+@media (max-width: 320px)
